# matchengine-raft

./: .gitignore  Cargo.toml  GUIDE_cn.md  README.md  README_CN.md  open-cluster.sh  test-cluster.sh  test-match.sh  test-matrics.sh  test.sh
src/: app.rs  client.rs  lib.rs
src/matchengine/: mod.rs
src/network/: api.rs  management.rs  raft.rs  raft_network_impl.rs
src/store/: config.rs  log.rs  log_store.rs  mod.rs  state_machine.rs  store.rs  types.rs
tests/cluster/: main.rs  test_cluster.rs
