[package]
name = "matchengine-raft"
version = "0.1.0"
edition = "2024"
authors = [
    "Raymond <rshen.sy@gmail.com>"
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "A distributed matching engine built upon `openraft`."
homepage = "https://github.com/raymondshe/matchengine-raft"
keywords = ["raft", "consensus", "matching-engine"]
license = "MIT/Apache-2.0"
repository = "https://github.com/raymondshe/matchengine-raft"
readme = "README.md"

[[bin]]
name = "matchengine-raft"
path = "src/bin/main.rs"

[dependencies]
actix-web = "4.0.0-rc.2"
async-trait = "0.1.36"
clap = { version = "4.1.11", features = ["derive", "env"] }
env_logger = "0.9.0"
openraft = { git = "https://github.com/datafuselabs/openraft", rev = "903770f", features = ["serde", "type-alias"] }
openraft-legacy = { git = "https://github.com/datafuselabs/openraft", rev = "903770f" }
futures = "0.3"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version="1.0.114", features=["derive", "rc"] }
serde_json = "1.0.57"
tokio = { version="1.39", default-features=false, features=["sync", "io-util", "macros", "rt", "rt-multi-thread", "time", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
uuid = { version = "0.8.1", features = ["v4"] }
sled = "0.34.7"
walkdir = "2.3.2"
rand = "0.9"
thiserror = "2.0.18"

[dev-dependencies]
anyhow = "1.0.63"
maplit = "1.0.2"

[features]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
